# ChangeLog for games-puzzle/tanglet
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-puzzle/tanglet/ChangeLog,v 1.21 2015/02/19 01:54:14 mr_bones_ Exp $

  19 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org>
  -files/tanglet-1.2.2-datadir.patch, -tanglet-1.2.2.ebuild:
  old

*tanglet-1.3.1 (11 Feb 2015)

  11 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org>
  +files/tanglet-1.3.1-datadir.patch, +tanglet-1.3.1.ebuild,
  files/tanglet-1.2.1-datadir.patch, files/tanglet-1.2.2-datadir.patch,
  tanglet-1.2.2.ebuild:
  version bump

  28 Aug 2014; Michael Sterrett <mr_bones_@gentoo.org> tanglet-1.2.2.ebuild:
  tidy

  28 Aug 2014; Michael Sterrett <mr_bones_@gentoo.org>
  -files/tanglet-1.2.0-datadir.patch, -tanglet-1.2.0.ebuild:
  old

*tanglet-1.2.2 (19 May 2014)

  19 May 2014; Tupone Alfredo <tupone@gentoo.org> +tanglet-1.2.2.ebuild,
  +files/tanglet-1.2.2-datadir.patch:
  Version bump to 1.2.2. Bug #500194 by Julian Ospald (hasufell)

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> tanglet-1.2.0.ebuild,
  tanglet-1.2.1.ebuild:
  Move Qt dependencies to the new category

  25 Feb 2013; Agostino Sarubbo <ago@gentoo.org> tanglet-1.2.1.ebuild:
  Stable for x86, wrt bug #458526

  21 Feb 2013; Sergey Popov <pinkbyte@gentoo.org> tanglet-1.2.1.ebuild:
  Stable on amd64, wrt bug #458526

*tanglet-1.2.1 (22 Jan 2013)

  22 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org>
  +files/tanglet-1.2.1-datadir.patch, +tanglet-1.2.1.ebuild,
  -files/tanglet-1.1.0-datadir.patch:
  version bump (bug #452278)

  27 Mar 2012; Michael Sterrett <mr_bones_@gentoo.org> -tanglet-1.1.0.ebuild:
  old

  28 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> tanglet-1.2.0.ebuild:
  x86 stable wrt bug #400813

  26 Jan 2012; Agostino Sarubbo <ago@gentoo.org> tanglet-1.2.0.ebuild:
  Stable for amd64, wrt bug #400813

*tanglet-1.2.0 (22 Dec 2011)

  22 Dec 2011; Michael Sterrett <mr_bones_@gentoo.org>