@@ -2,7 +2,7 @@ AUX tanglet-1.2.1-datadir.patch 500 SHA256 bf6867e9ced278315eb838dead6625bfe39f4
 AUX tanglet-1.3.1-datadir.patch 732 SHA256 58136f0cc97f0cd16c43443c15ec6cc268f6a9eb50c1e7bb3c8e39fd5f7c1f19 SHA512 35442f4b9bfe344c7168048ccd7d0742319b6ab3078d9df13fe66455d45b31a5bb01f7e4ad05b4ba25c83046bfe1428f6a2271231130c433ceac1b18fd405414 WHIRLPOOL c083764d1401ee11b18f70e8d464980b99dfbb1c544eb15ea2220509de61c1e9e0046d0b9337efd8d47b8642348a071f2ac8da33563d53038d73bb7611365f54
 DIST tanglet-1.2.1-src.tar.bz2 7814483 SHA256 94f4c5c76020ec1fe502ff076fbe5471e497d4b7bcabd1e9059e1022d1ce80c8 SHA512 25cb7d5f3884e32298562ca3c9655e4386f07a03911f436253d249d741f2ffad10646c3d37370da56e749b36e8926b3543e6f5f7ae560550a1c1efaf254fb121 WHIRLPOOL 71228788ef49538abca37ff54ff19d11806ba9d4f485bb9707402d635cc8089aa118653995d58dd4c2186fd72f6de96eaf86159fb9061777f0d9968a44df1a72
 DIST tanglet-1.3.1-src.tar.bz2 8461603 SHA256 d0eab174eaa8cdd5f3499ae275db4cd720172ef28346273db7f5988f2304e0d8 SHA512 b939ca45f26baf8e7e32da8775e673707472e5cd07d344642eeb15986ff99319e0ab1bacf78e2ea49f004ec67a6d081a91c939cf7c75228a195654d429235625 WHIRLPOOL e2ee97327b95b502b603c953c4b42636fd060f8476bd0787f4d7527c9ebf04774868bd0f923f5b7e89e24e4123143b87e8d9859087685fd62d83c46da26b145d
-EBUILD tanglet-1.2.1.ebuild 1130 SHA256 f69529afc1b2ee29845fb21c7eb519da0535e98ae8eb7cdf711e598fb521f265 SHA512 45362e113182908e8a20a710be759bb891bacea1ae4c0c7c15e255f38520f04bd61893ff7cacb5f6f8709f89560b470ba731b36ce844aba13833cab20a30bb6a WHIRLPOOL 9e763b1576b9d9a81c3abd9aa82d8a6e9ba092d3aecc0dc1093aadad5fbdf5a0db0fe806fdb4a1f208a92379ecf17666bc9c1371c68339a33f1125e02e631da8
+EBUILD tanglet-1.2.1.ebuild 1142 SHA256 d7ab68674b98c95346bb2bf27d64b2af3f8bf052f2093c98e3c55b231eb2ec80 SHA512 1d738d43b133ca3f4f0524a983307d944d1e74bac2da6630e246c8414de290159ba0c78e41562ee7cd5eff17b29fab92949a7cff8362b8ff874d392bdb253010 WHIRLPOOL a681fbd5ef631713985cf59b42d0ae863592f9a47848cabef1c2b0f3318d0b48787bbf3d17757f738859864824a3c24251edb266c910ac0139140a3de518b72b
 EBUILD tanglet-1.3.1.ebuild 1452 SHA256 5c6140283d694c4af968b285720a576da51bae69303d0aa7cd32a0e2631a6579 SHA512 295650c2c28360dc1a3dceb046160d0611107ca096b0d51038ed6002368dfdec0d23a5c8e80a09ed22e1f910b331dda04636d7d4f407bf531a43986371c5861f WHIRLPOOL c1df646b9ba625377d96bcccbc1a075f7076e20f67be29be2897cc6863460cac9ca7a788d186cb48a2d99e51a5ea72f9f43868c3523b188e1ac94f5d5b69710b
-MISC ChangeLog 3103 SHA256 5fb003ba93158de7594f57b28e4a5be8b7da14cae6a18c9c523dbd567364daf2 SHA512 6ee8622e561c6d2a049e0280d2057760a0a7394aba1ffc9c65622eed5ec674cd409ea72d7e277496a046399a52bdf3f2a3b76b1a5178e4312fa2495fc1465582 WHIRLPOOL 92a99bf6527b9599f50afc6a504e729ff9b36ebca03d204d042b6fa443f4a5c590d0345f25c5fbf9778f694fb9fc1209bd907cf10f7b1d021476794580df3106
+MISC ChangeLog 3214 SHA256 2d56ffb1c8514c72c98f34b6cb92a918855c96e6ad42fa425ab34512cad24a3b SHA512 9416bf6d6de6b55f69b8da5531f847eec9857caf7e4396b5955561179bb318b6bcb771f9dc5413bcea3eb770d1dc87ecd25848e2c411236152526fb6966f3062 WHIRLPOOL 44228d4067c9b7bd315d31b9041223b71cd83d36f3e7056f0b00764753e58de87b82e97f594484612402e67caa3ddcf69d9dcb4f5c682db19fcda2958f17482d
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
