@@ -1,7 +1,7 @@
 DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup unpack
 DEPEND=sys-libs/zlib dev-qt/qtcore:4 dev-qt/qtgui:4 >=sys-apps/sed-4
 DESCRIPTION=A single player word finding game based on Boggle
-EAPI=2
+EAPI=5
 HOMEPAGE=http://gottcode.org/tanglet/
 KEYWORDS=amd64 x86
 LICENSE=GPL-3
@@ -9,4 +9,4 @@ RDEPEND=sys-libs/zlib dev-qt/qtcore:4 dev-qt/qtgui:4 games-misc/games-envd
 SLOT=0
 SRC_URI=http://gottcode.org/tanglet/tanglet-1.2.1-src.tar.bz2
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	games	1ad3205dbf62a2c98249f2f59b0a2d39	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	ea709b525d28e3087eddedb2f884dbbe	qt4-r2	7199e3db5b5908325487d379c6f67cf0	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=0c148ec0ac43b1e1eefbb471bf3f3a12
+_md5_=1406bed70af35b818ddbb5d35fd0c02f
