@@ -1,6 +1,10 @@
 # ChangeLog for games-puzzle/tanglet
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/tanglet/ChangeLog,v 1.21 2015/02/19 01:54:14 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/tanglet/ChangeLog,v 1.22 2015/03/12 21:23:59 mr_bones_ Exp $
+
+  12 Mar 2015; Michael Sterrett <mr_bones_@gentoo.org> tanglet-1.2.1.ebuild,
+  tanglet-1.3.1.ebuild:
+  EAPI=5
 
   19 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org>
   -files/tanglet-1.2.2-datadir.patch, -tanglet-1.2.2.ebuild:
